end of form section

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <input type="text" placeholder="Entrer votre nom" name="" value="">
     <select>
       <option value="">Sélectionner votre language</option>
-      <option value="">JS</option>
-      <option value="">PHP</option>
-      <option value="">MYSQL</option>
+      <option value="JS">JS</option>
+      <option value="PHP">PHP</option>
+      <option value="MYSQL">MYSQL</option>
     </select>
 
     <input type="checkbox" id="cgv">
